<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go Game Clock</string>

    <string name="menu_reset">Reset</string>
    <string name="menu_configure">Configure</string>
    <string name="menu_options">Options</string>

    <string name="main_start">Start</string>
    <string name="main_pause">Pause</string>

    <string name="main_time">Main Time</string>
    <string name="out_of_time">Out of Time</string>
    <string name="stones">Stones Left: </string>
    <string name="periods">Periods Left: </string>
    <string name="sudden_death">Sudden Death</string>

    <string name="title_activity_options">OptionsActivity</string>
    <string name="options_title">Options</string>
    <string name="action_settings">Settings</string>
    <string name="haptic_label">Haptic feedback when player switches</string>
    <string name="dark_background">Dark background</string>
    <string name="light_background">Light background</string>

    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="configuration_title">Configuration</string>
    <string name="standard_byoyomi">Standard Byoyomi</string>
    <string name="canadian_byoyomi">Canadian Byoyomi</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="num_periods">Number of Byoyomi Periods</string>
    <string name="num_stones">Stones per Period</string>
    <string name="period_length">Period Length</string>
    <string name="save_exit">Save and Return</string>

</resources>